# xtensor-benchmark

./: .gitignore  CMakeLists.txt  LICENSE  README.md  environment-dev.yml  main.cpp
.github/workflows/: c-cpp.yml  ci.yml
benchmark/: CMakeLists.txt  reduction_benchmark.cpp
include/: reduction.hpp
source/: CMakeLists.txt
source/benchmarks/: CMakeLists.txt  main.cpp  reduction_benchmark.cpp
source/tests/: CMakeLists.txt  reduction.cpp
